<resources>
    <string name="app_name">Lifter\'s Log</string>
    <string name="action_settings">Settings</string>
    <string name="bweight_hint">Body Weight (lbs)</string>
    <string name="info_dialog">This app, Lifter\'s Log, is meant to help you track your workouts and improve your technique, as well as providing a spot to estimate how many calories you burned during the workout. The app contains four parts. The first part lets you take a video of yourself for review, and it saves to the media part on your SD Card. The second section is a log for all of you exercises. Press the plus icon in the action bar to add a new entry. Long click on an entry to delete it. The third part provides links to technique guides on the four major lifts. The last part is a calculator to calculate how many calories you have burned based on age, body weight, gender, heart rate, and time. You can find your heart rate by taking your pulse immediately after exercise.</string>
    <string name="heart_rate_hint">Heart Rate (bpm)</string>
    <string name="time_hint">Time (min)</string>
    <string name="exercise_hint">Exercise performed</string>
    <string name="weight_hint">Weight lifted (lbs)</string>
    <string name="reps_hint">Reps performed</string>
    <string name="date_hint">Date</string>
    <string name="bench">Bench Press</string>
    <string name="dead">Deadlift</string>
    <string name="ohp">Overhead Press</string>
    <string name="squat">Squat</string>
    <string name="age_hint">Age (years)</string>
    <string name="video">Click the button to take a video of yourself performing an exercise. Grab a friend to help record!</string>
    <string name="capture">Capture Video</string>
    <string name="exercise_title">Exercise Guides</string>
    <string name="kcal_title">How Many Calories Did You Burn?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
</resources>
